[package]
name = "community_walk_graph"
description = "An in-memory graph for finding communities with random walks"
version = "0.1.0"
readme = "README.md"
edition = "2018"
authors = ["Not-Simon <not_simon@not_simon.com>"]

[lib]
name = "community_walk_graph"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
rand = "0.7"
rayon = "1.1"